==> apache/nuttx/arch/arm/src/nrf53/nrf53_tim.c <==
#include <nuttx/config.h>
#include <assert.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include "arm_internal.h"
#include "hardware/nrf53_tim.h"
#include "nrf53_tim.h"

static uint32_t nrf53_tim_getreg(struct nrf53_tim_dev_s *dev,
                                 uint32_t offset)
{
  DEBUGASSERT(dev);

  return getreg32(((struct nrf53_tim_priv_s *)dev)->base + offset);
}

static void nrf53_tim_putreg(struct nrf53_tim_dev_s *dev,
                             uint32_t offset,
                             uint32_t value)
{
  DEBUGASSERT(dev);

  putreg32(value, ((struct nrf53_tim_priv_s *)dev)->base + offset);
}

static int nrf53_tim_start(struct nrf53_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  nrf53_tim_putreg(dev, NRF53_TIM_TASKS_START_OFFSET, TIM_TASKS_START);

  return OK;
}

static int nrf53_tim_stop(struct nrf53_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  nrf53_tim_putreg(dev, NRF53_TIM_TASKS_STOP_OFFSET, TIM_TASKS_STOP);

  return OK;
}

static int nrf53_tim_clear(struct nrf53_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  nrf53_tim_putreg(dev, NRF53_TIM_TASKS_CLEAR_OFFSET, TIM_TASKS_CLEAR);

  return OK;
}

static int nrf53_tim_configure(struct nrf53_tim_dev_s *dev, uint8_t mode,
                               uint8_t width)
{
  uint32_t regval = 0;
  int      ret    = OK;

  DEBUGASSERT(dev);

  /* Configure TIMER mode */

  switch (mode)
    {
      case NRF53_TIM_MODE_UNUSED:
        {
          regval = 0;
          break;
        }

      case NRF53_TIM_MODE_TIMER:
        {
          regval = TIM_MODE_TIMER;
          break;
        }

      case NRF53_TIM_MODE_COUNTER:
        {
          regval = TIM_MODE_COUNTER;
          break;
        }

      case NRF53_TIM_MODE_LOWPOWER:
        {
          regval = TIM_MODE_LPCOUNTER;
          break;
        }

      default:
        {
          tmrerr("ERROR: unsupported TIMER mode %d\n", mode);
          ret = -EINVAL;
          goto errout;
        }
    }

  nrf53_tim_putreg(dev, NRF53_TIM_MODE_OFFSET, regval);

  /* Configure TIMER width */

  switch (width)
    {
      case NRF53_TIM_WIDTH_16B:
        {
          regval = TIM_BITMODE_16B;
          break;
        }

      case NRF53_TIM_WIDTH_8B:
        {
          regval = TIM_BITMODE_8B;
          break;
        }

      case NRF53_TIM_WIDTH_24B:
        {
          regval = TIM_BITMODE_24B;
          break;
        }

      case NRF53_TIM_WIDTH_32B:
        {
          regval = TIM_BITMODE_32B;
          break;
        }

      default:
        {
          tmrerr("ERROR: unsupported TIMER width %d\n", width);
          ret = -EINVAL;
          goto errout;
        }
    }

  nrf53_tim_putreg(dev, NRF53_TIM_BITMODE_OFFSET, regval);

errout:
  return ret;
}

static int nrf53_tim_setpre(struct nrf53_tim_dev_s *dev, uint8_t pre)
{
  int ret = OK;

  DEBUGASSERT(dev);

  if (pre < NRF53_TIM_PRE_16000000 || pre > NRF53_TIM_PRE_31250)
    {
      tmrerr("ERROR: unsupported TIMER prescaler %d\n", pre);
      ret = -EINVAL;
      goto errout;
    }

  nrf53_tim_putreg(dev, NRF53_TIM_PRESCALER_OFFSET, pre);

errout:
  return ret;
}

static int nrf53_tim_setisr(struct nrf53_tim_dev_s *dev, xcpt_t handler,
                            void *arg)
{
  struct nrf53_tim_priv_s *tim = NULL;
  int ret = OK;

  DEBUGASSERT(dev);

  tim = (struct nrf53_tim_priv_s *)dev;

  /* Disable interrupt when callback is removed */

  if (!handler)
    {
      up_disable_irq(tim->irq);
      irq_detach(tim->irq);
      ret = OK;
      goto errout;
    }

  /* Otherwise set callback and enable interrupt */

  irq_attach(tim->irq, handler, arg);
  up_enable_irq(tim->irq);

errout:
  return ret;
}

static int nrf53_tim_enableint(struct nrf53_tim_dev_s *dev, uint8_t s)
{
  uint32_t regval = 0;
  int      ret    = OK;

  DEBUGASSERT(dev);

  /* Get register value for given interrupt source */

  regval = nrf53_tim_irq2reg(dev, s);
  if (regval == 0)
    {
      ret = -EINVAL;
      goto errout;
    }

  nrf53_tim_putreg(dev, NRF53_TIM_INTENSET_OFFSET, regval);

errout:
  return ret;
}

static int nrf53_tim_disableint(struct nrf53_tim_dev_s *dev, uint8_t s)
{
  uint32_t regval = 0;
  int      ret    = OK;

  DEBUGASSERT(dev);

  /* Get register value for given interrupt source */

  regval = nrf53_tim_irq2reg(dev, s);
  if (regval == 0)
    {
      ret = -EINVAL;
      goto errout;
    }

  nrf53_tim_putreg(dev, NRF53_TIM_INTCLR_OFFSET, regval);

errout:
  return ret;
}

static int nrf53_tim_checkint(struct nrf53_tim_dev_s *dev, uint8_t s)
{
  int ret = 0;

  DEBUGASSERT(dev);

  switch (s)
    {
      case NRF53_TIM_INT_COMPARE0:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(0));
          break;
        }

      case NRF53_TIM_INT_COMPARE1:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(0));
          break;
        }

      case NRF53_TIM_INT_COMPARE2:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(2));
          break;
        }

      case NRF53_TIM_INT_COMPARE3:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(3));
          break;
        }

      case NRF53_TIM_INT_COMPARE4:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(4));
          break;
        }

      case NRF53_TIM_INT_COMPARE5:
        {
          ret = nrf53_tim_getreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(5));
          break;
        }

      default:
        {
          tmrerr("ERROR: unsupported IRQ source %d\n", s);
          ret = -EINVAL;
          goto errout;
        }
    }

errout:
  return ret;
}

static int nrf53_tim_ackint(struct nrf53_tim_dev_s *dev, uint8_t s)
{
  int ret = 0;

  DEBUGASSERT(dev);

  switch (s)
    {
      case NRF53_TIM_INT_COMPARE0:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(0), 0);
          break;
        }

      case NRF53_TIM_INT_COMPARE1:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(1), 0);
          break;
        }

      case NRF53_TIM_INT_COMPARE2:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(2), 0);
          break;
        }

      case NRF53_TIM_INT_COMPARE3:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(3), 0);
          break;
        }

      case NRF53_TIM_INT_COMPARE4:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(4), 0);
          break;
        }

      case NRF53_TIM_INT_COMPARE5:
        {
          nrf53_tim_putreg(dev, NRF53_TIM_EVENTS_COMPARE_OFFSET(5), 0);
          break;
        }

      default:
        {
          tmrerr("ERROR: unsupported IRQ source %d\n", s);
          ret = -EINVAL;
          goto errout;
        }
    }

errout:
  return ret;
}

struct nrf53_tim_dev_s *nrf53_tim_init(int timer)
{
  struct nrf53_tim_priv_s *tim = NULL;

  /* Get timer instance */

  switch (timer)
    {
#ifdef CONFIG_NRF53_TIMER0
      case 0:
        {
          tim = &g_nrf53_tim0_priv;
          break;
        }
#endif

#ifdef CONFIG_NRF53_TIMER1
      case 1:
        {
          tim = &g_nrf53_tim1_priv;
          break;
        }
#endif

#ifdef CONFIG_NRF53_TIMER2
      case 2:
        {
          tim = &g_nrf53_tim2_priv;
          break;
        }
#endif

#ifdef CONFIG_NRF53_TIMER3
      case 3:
        {
          tim = &g_nrf53_tim3_priv;
          break;
        }
#endif

#ifdef CONFIG_NRF53_TIMER4
      case 4:
        {
          tim = &g_nrf53_tim4_priv;
          break;
        }
#endif

      default:
        {
          tmrerr("ERROR: unsupported TIMER %d\n", timer);
          goto errout;
        }
    }

  if (tim->inuse != false)
    {
      /* Timer already in use */

      tim = NULL;
    }

errout:
  return (struct nrf53_tim_dev_s *)tim;
}

int nrf53_tim_deinit(struct nrf53_tim_dev_s *dev)
{
  struct nrf53_tim_priv_s *tim = NULL;

  DEBUGASSERT(dev);

  tim = (struct nrf53_tim_priv_s *)dev;

  tim->inuse = false;

  return OK;
}
