==> apache/nuttx/arch/xtensa/src/esp32/esp32_tim.c <==
#include <nuttx/config.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <stdbool.h>
#include <stdio.h>
#include <debug.h>
#include "xtensa.h"
#include "hardware/esp32_tim.h"
#include "esp32_tim.h"
#include "esp32_cpuint.h"

static uint32_t esp32_tim_getreg(FAR struct esp32_tim_dev_s *dev,
                                 uint32_t offset)
{
  DEBUGASSERT(dev);

  return getreg32(((struct esp32_tim_priv_s *)dev)->base + offset);
}

static void esp32_tim_putreg(FAR struct esp32_tim_dev_s *dev,
                             uint32_t offset,
                             uint32_t value)
{
  DEBUGASSERT(dev);

  putreg32(value, ((struct esp32_tim_priv_s *)dev)->base + offset);
}

static int esp32_tim_start(FAR struct esp32_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  esp32_tim_modifyreg32(dev, TIM_CONFIG_OFFSET, 0, TIMG_T0_EN);

  return OK;
}

static int esp32_tim_stop(FAR struct esp32_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  esp32_tim_modifyreg32(dev, TIM_CONFIG_OFFSET, TIMG_T0_EN, 0);

  return OK;
}

static int esp32_tim_clear(FAR struct esp32_tim_dev_s *dev)
{
  uint32_t clear_value = 0;

  DEBUGASSERT(dev);

  esp32_tim_putreg(dev, TIM_LOAD_LO_OFFSET, clear_value);
  esp32_tim_putreg(dev, TIM_LOAD_HI_OFFSET, clear_value);

  /* Dummy value to trigger reload the counter with the previous value */

  esp32_tim_putreg(dev, TIM_LOAD_OFFSET, BIT(0));

  return OK;
}

static int esp32_tim_configure(FAR struct esp32_tim_dev_s *dev, uint16_t pre,
                               uint8_t mode, uint64_t counter_value,
                               uint64_t alarm_value, bool alarm,
                               bool autoreload)
{
  int ret = OK;

  DEBUGASSERT(dev);

  /* Change the prescaler divider with the timer enabled can lead to
   * unpredictable results, so it is disabled before configuring
   */

  ret = esp32_tim_stop(dev);
  if (ret != OK)
    {
      goto errout;
    }

  /* Configure TIMER prescaler */

  ret = esp32_tim_setpre(dev, pre);
  if (ret != OK)
    {
      goto errout;
    }

  /* Configure TIMER mode */

  ret = esp32_tim_setmode(dev, mode);
  if (ret != OK)
    {
      goto errout;
    }

  /* Configure TIMER counter value */

  ret = esp32_tim_setcounter(dev, counter_value);
  if (ret != OK)
    {
      goto errout;
    }

  /* Configure TIMER alarm value */

  ret = esp32_tim_setalarmvalue(dev, counter_value);
  if (ret != OK)
    {
      goto errout;
    }

  /* Enable TIMER alarm */

  ret = esp32_tim_setalarm(dev, alarm);
  if (ret != OK)
    {
      goto errout;
    }

  /* Configure TIMER auto-reload */

  ret = esp32_tim_setautoreload(dev, autoreload);
  if (ret != OK)
    {
      goto errout;
    }

errout:
  return ret;
}

static int esp32_tim_setpre(FAR struct esp32_tim_dev_s *dev, uint16_t pre)
{
  uint32_t mask = (uint32_t)pre << TIMG_T0_DIVIDER_S;

  DEBUGASSERT(dev);

  esp32_tim_modifyreg32(dev, TIM_CONFIG_OFFSET, TIMG_T0_DIVIDER_M, mask);

  return OK;
}

static int esp32_tim_setisr(FAR struct esp32_tim_dev_s *dev, xcpt_t handler,
                            FAR void *arg)
{
  FAR struct esp32_tim_priv_s *tim = NULL;
  int ret = OK;
  uint8_t cpu;

  DEBUGASSERT(dev);

  tim = (FAR struct esp32_tim_priv_s *)dev;

  /* Disable interrupt when callback is removed */

  if (handler == NULL)
    {
      /* If a CPU Interrupt was previously allocated, then deallocate it */

      if (tim->cpuint >= 0)
        {
          /* Disable CPU Interrupt, free a previously allocated
           * CPU Interrupt
           */

          up_disable_irq(tim->cpuint);
          cpu = up_cpu_index();
          esp32_detach_peripheral(cpu, tim->periph, tim->cpuint);
          esp32_free_cpuint(tim->cpuint);
          irq_detach(tim->irq);
        }

      ret = OK;
      goto errout;
    }

  /* Otherwise set callback and enable interrupt */

  /* Verify the available CPU Interrupt */

  tim->cpuint = esp32_alloc_levelint(1);
  if (tim->cpuint < 0)
    {
      tmrerr("ERROR: No CPU Interrupt available");
      ret = tim->cpuint;
      goto errout;
    }

  /* Disable the provided CPU Interrupt to configure it */

  up_disable_irq(tim->cpuint);

  /* Attach a peripheral interrupt to the available CPU interrupt in
   * the current core
   */

  cpu = up_cpu_index();
  esp32_attach_peripheral(cpu, tim->periph, tim->cpuint);

  /* Associate an IRQ Number (from the timer) to an ISR */

  ret = irq_attach(tim->irq, handler, arg);

  if (ret != OK)
    {
      esp32_detach_peripheral(cpu, tim->periph, tim->cpuint);
      esp32_free_cpuint(tim->cpuint);
      tmrerr("ERROR: Failed to associate an IRQ Number");
      goto errout;
    }

  /* Enable the CPU Interrupt that is linked to the timer */

  up_enable_irq(tim->cpuint);

errout:
  return ret;
}

static int esp32_tim_enableint(FAR struct esp32_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  /* Set the edge interrupt bit */

  esp32_tim_modifyreg32(dev, TIM_CONFIG_OFFSET, 0, TIMG_T0_LEVEL_INT_EN);

  return OK;
}

static int esp32_tim_disableint(FAR struct esp32_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  esp32_tim_modifyreg32(dev, TIM_CONFIG_OFFSET, TIMG_T0_LEVEL_INT_EN, 0);

  return OK;
}

static int esp32_tim_checkint(FAR struct esp32_tim_dev_s *dev)
{
  int ret = 0;
  uint32_t reg_value;

  DEBUGASSERT(dev);

  /* Timer 0 from group 0 or 1 */

  if (((struct esp32_tim_priv_s *)dev)->base == TIMG_T0CONFIG_REG(0) ||
    ((struct esp32_tim_priv_s *)dev)->base == TIMG_T0CONFIG_REG(1))
    {
      reg_value = esp32_tim_getreg(dev, TIM0_INT_ST_OFFSET);
      if (reg_value & TIMG_T0_INT_ST)
        {
          ret = 1;
        }
    }

  /* Timer 1 from group 0 or 1 */

  else
    {
      reg_value = esp32_tim_getreg(dev, TIM1_INT_ST_OFFSET);
      if (reg_value & TIMG_T1_INT_ST)
        {
          ret = 1;
        }
    }

  return ret;
}

static int esp32_tim_ackint(FAR struct esp32_tim_dev_s *dev)
{
  DEBUGASSERT(dev);

  /* Timer 0 from group 0 or 1 */

  if (((struct esp32_tim_priv_s *)dev)->base == TIMG_T0CONFIG_REG(0) ||
    ((struct esp32_tim_priv_s *)dev)->base == TIMG_T0CONFIG_REG(1))
    {
        esp32_tim_putreg(dev, TIM0_CLR_OFFSET, TIMG_T0_INT_CLR);
    }

  /* Timer 1 from group 0 or 1 */

  else
    {
      esp32_tim_putreg(dev, TIM1_CLR_OFFSET, TIMG_T1_INT_CLR);
    }

  return OK;
}

FAR struct esp32_tim_dev_s *esp32_tim_init(int timer)
{
  FAR struct esp32_tim_priv_s *tim = NULL;

  /* Get timer instance */

  switch (timer)
    {
#ifdef CONFIG_ESP32_TIMER0
      case 0:
        {
          tim = &g_esp32_tim0_priv;
          break;
        }
#endif

#ifdef CONFIG_ESP32_TIMER1
      case 1:
        {
          tim = &g_esp32_tim1_priv;
          break;
        }
#endif

#ifdef CONFIG_ESP32_TIMER2
      case 2:
        {
          tim = &g_esp32_tim2_priv;
          break;
        }
#endif

#ifdef CONFIG_ESP32_TIMER3
      case 3:
        {
          tim = &g_esp32_tim3_priv;
          break;
        }
#endif

      default:
        {
          tmrerr("ERROR: unsupported TIMER %d\n", timer);
          goto errout;
        }
    }

  if (tim->inuse == true)
    {
      tmrerr("ERROR: TIMER %d is already in use\n", timer);
      tim = NULL;
    }

  errout:
  return (FAR struct esp32_tim_dev_s *)tim;
}

int esp32_tim_deinit(FAR struct esp32_tim_dev_s *dev)
{
  FAR struct esp32_tim_priv_s *tim = NULL;

  DEBUGASSERT(dev);

  tim = (FAR struct esp32_tim_priv_s *)dev;

  tim->inuse = false;

  return OK;
}
